codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› 让 Codex 做任何事                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / 查看命令                             ! Shell 命令                                               "
"  shift + enter 换行                  tab 排队消息                                                  "
"  @ 文件路径                           ctrl + v 粘贴图片                                            "
"  ctrl + g 在外部编辑器中编辑        esc 再按一次编辑上一条消息                                     "
"  ctrl + c 退出                                                                                     "
"  ctrl + t 查看记录                                                                                 "
